Avoid redundant `scan` when deleting and other optimisations (#11)