@@ -1,20 +1,15 @@
 package com.willmolloy.backup;
 
-import static java.util.function.Predicate.not;
+import static com.willmolloy.backup.util.TimeHelper.elapsed;
 
 import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
-import java.nio.file.Path;
-import java.text.NumberFormat;
-import java.time.Duration;
-import java.util.Locale;
 import java.util.Optional;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.atomic.AtomicBoolean;
-import java.util.function.Supplier;
+import java.util.function.Predicate;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
-import org.apache.logging.log4j.message.EntryMessage;
 
 /**
  * Runs a {@link Backup}.
@@ -28,8 +23,6 @@ import org.apache.logging.log4j.message.EntryMessage;
 public final class BackupRunner {
 
   private static final Logger log = LogManager.getLogger();
-  private static final NumberFormat NUMBER_FORMAT = NumberFormat.getInstance(Locale.ENGLISH);
-  private static final int MEGA = 1_000_000;
 
   /** Runs the backup. */
   public static <SourceFileT extends File, DestFileT extends File> boolean run(
@@ -40,79 +33,50 @@ public final class BackupRunner {
     AtomicBoolean allSuccess = new AtomicBoolean(true);
 
     try (ExecutorService threadPool =
-        Executors.newThreadPerTaskExecutor(Thread.ofVirtual().name("worker-", 1).factory())) {
+        Executors.newFixedThreadPool(10, Thread.ofVirtual().name("worker-", 1).factory())) {
 
-      FileTree<SourceFileT> sourceFiles = scanWithLog(backup.source()::scan, "source");
-      FileTree<DestFileT> destFiles = scanWithLog(backup.destination()::scan, "destination");
+      FileTree<SourceFileT> sourceFileTree = backup.source().fileTree();
+      FileTree<DestFileT> destFileTree = backup.destination().fileTree();
 
-      sourceFiles.forEach(
-          (sourceFile) -> {
-            Path key = sourceFile.relativePath();
+      sourceFileTree
+          // only need to put leaves
+          .leaves()
+          .forEach(
+              sourceFile -> {
+                Optional<DestFileT> maybeDestFile = destFileTree.get(sourceFile.relativePath());
+                if (maybeDestFile.isEmpty() || !sourceFile.same(maybeDestFile.get())) {
+                  threadPool.submit(
+                      () -> {
+                        log.debug("put({}, {})", sourceFile, maybeDestFile);
+                        if (!backup.put(sourceFile)) {
+                          allSuccess.set(false);
+                        }
+                      });
+                } else {
+                  log.debug("same({}, {})", sourceFile, maybeDestFile.get());
+                }
+              });
 
-            if (sourceFiles.descendants(key).anyMatch(descendant -> true)) {
-              log.debug("Skipping put({}). Covered by descendant", key);
-              return;
-            }
-
-            Optional<DestFileT> maybeDestFile = destFiles.get(key);
-            if (maybeDestFile.isEmpty() || !sourceFile.same(maybeDestFile.get())) {
-              threadPool.submit(
-                  () -> {
-                    EntryMessage m = log.traceEntry("put({})", sourceFile);
-                    if (!log.traceExit(m, backup.put(sourceFile))) {
-                      allSuccess.set(false);
-                    }
-                  });
-            } else {
-              log.trace("same({})", key);
-            }
-          });
-
-      destFiles.forEach(
-          (destFile) -> {
-            Path key = destFile.relativePath();
-
-            if (sourceFiles.contains(key)) {
-              return;
-            }
-
-            if (destFiles
-                .ancestors(key)
-                .map(File::relativePath)
-                .anyMatch(not(sourceFiles::contains))) {
-              log.debug("Skipping delete({}). Covered by ancestor", key);
-              return;
-            }
-
-            threadPool.submit(
-                () -> {
-                  EntryMessage m = log.traceEntry("delete({})", destFile);
-                  if (!log.traceExit(m, backup.delete(destFile))) {
-                    allSuccess.set(false);
-                  }
-                });
-          });
+      Predicate<DestFileT> canDelete =
+          destFile -> !sourceFileTree.contains(destFile.relativePath());
+      destFileTree
+          .postorder()
+          .filter(canDelete)
+          // skip delete if covered by ancestor
+          .filter(destFile -> destFileTree.ancestors(destFile).noneMatch(canDelete))
+          .forEach(
+              destFile ->
+                  threadPool.submit(
+                      () -> {
+                        log.debug("delete({})", destFile);
+                        if (!backup.delete(destFile)) {
+                          allSuccess.set(false);
+                        }
+                      }));
     }
 
     log.info("Finished: {} in: {}", backup, elapsed(runStartNanos));
     return allSuccess.get();
-  }
-
-  private static <FileT extends File> FileTree<FileT> scanWithLog(
-      Supplier<FileTree<FileT>> scan, String locationForLog) {
-    long scanStartNanos = System.nanoTime();
-    FileTree<FileT> fileTree = scan.get();
-    log.info(
-        "Scanned {} in: {}. {} files. {}MB",
-        locationForLog,
-        elapsed(scanStartNanos),
-        NUMBER_FORMAT.format(fileTree.fileCount()),
-        NUMBER_FORMAT.format(fileTree.totalSize() / MEGA));
-    return fileTree;
-  }
-
-  private static Duration elapsed(long startNanos) {
-    return Duration.ofNanos(System.nanoTime() - startNanos);
   }
 
   private BackupRunner() {}
